# XGospel-2.0

./: CHANGES  FAQ  FILES  GoBoard.c  INSTALL  Imakefile  MOVEFILES  Makefile.in  README  README.1ST  README.md  SmeBell.c  SmeBell.h  SmeBellP.h  TODO  XGospel.res  aclocal.m4  analyze.c  analyze.h  board.xpm  broadcast.c  broadcast.h  confdefs.h  configure  configure.in  connect.c  connect.h  dorelay  events.c  events.h  games.c  games.h  gamesP.h  gointer.c  gointer.h  gointer.tab.h  gointer.y  goserver.c  goserver.l  gospel.c  (+29 more)
my/: COPYRIGHTS  Canvas.c  CheckMark  Imake.options  Imakefile  Makefile.in  MemQueue.c  MemQueue.h  Popup.c  SmeLabel.c  SmeLabel.h  SmeLabelP.h  SmeToggle.c  SmeToggle.h  SmeToggleP.h  TMyprint.c  TearofMenP.h  TearofMenu.c  TearofMenu.h  Tree.c  Tree.h  TreeP.h  XgospelIcon  XgospelIcon.xpm  YShell.c  YShell.h  YShellP.h  actions.c  except.c  except.h  lreslang.c  lreslang.l  lwidgettree.c  lwidgettree.l  myclass.c  mycontext.c  myconverters.c  mymalloc.c  mymalloc.h  mytext.c  (+12 more)
regex/: Imakefile  Makefile.in  regex.c  regex.h
